<resources>
    <string name="app_name">AhelpP</string>
    <string name="about">Πληροφορίες</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="home">Αρχική</string>
    <string name="theory">Θεωρία</string>
    <string name="practice">Εξάσκηση</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="login">Σύνδεση</string>
    <string name="signupDisc">Δεν είσαι ακόμη μέλος; </string>
    <string name="signup">ΕΓΓΡΑΦΗ</string>
    <string name="emptyField">Αυτό το πεδίο είναι υποχρεωτικό.</string>
    <string name="name">Όνομα</string>
    <string name="fullname">Επίθετο</string>
    <string name="passwordConf">Επαλήθευση κωδικού</string>
    <string name="emptyFieldAll">Παρακαλώ συμπληρώστε όλα τα πεδία.</string>
    <string name="tests">Tests</string>
    <string name="submitTest">ΥΠΟΒΟΛΗ</string>
    <string name="testResults">Score</string>
    <string name="performance">Επιδόσεις</string>
    <string name="bookmark">Αποθηκευμένες Ερωτήσεις</string>
    <string name="me">Εγώ</string>
    <string name="restartTest">Επανέναρξη</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="correct">Σωστές</string>
    <string name="wrong">Λανθασμένες</string>
    <string name="unAttempted">Αναπάντητες</string>
    <string name="otherTests">Challenges Κεφαλαίου</string>
    <string name="showAnswers">Προβολή Απαντήσεων</string>
    <string name="notYet">Δεν υπάρχουν αποθηκευμένες ερωτήσεις.</string>
    <string name="previousYears">Παλαιότερα Θέματα</string>
    <string name="a_help_p">A·help·P</string>
    <string name="_2022">2022</string>
    <string name="kourtakoumary_gmail_com">Επικοινωνία : kourtakoumary@gmail.com</string>
    <string name="to_the_top_str">Φτάσε στην κορυφή</string>
    <string name="stay_positive_str">Stay Positive</string>
    <string name="index_str">Αρχική</string>
    <string name="top_20_str">Top 20</string>
    <string name="ranking">Κατάταξη</string>
    <string name="score_str">SCORE</string>
    <string name="previous_years_str">Θέματα και Λύσεις Παλαιότερων Ετών</string>
    <string name="june_2021">Ιούνιος 2021</string>
    <string name="themata">Θέματα</string>
    <string name="sollutions">Λύσεις</string>
    <string name="june_2020">Ιούνιος 2020</string>
    <string name="june_2019">Ιούνιος 2019</string>
    <string name="june_2018">Ιούνιος 2018</string>
    <string name="june_2017">Ιούνιος 2017</string>
    <string name="challenge_str">Challenge</string>
    <string name="questions">Ερωτήσεις</string>
    <string name="start">ΕΝΑΡΞΗ</string>
    <string name="bookmarked_ones_discl">Δεν έχεις ακόμη διαθέσιμες ερωτήσεις για αυτό το Challenge</string>
    <string name="time">Χρόνος</string>
    <string name="stress">Tips θετικής ψυχολογίας</string>
    <string name="stress_cr">-- Από τη συμβουλευτική ψυχολόγο, κυρία Ξένια Ταραβίρα.</string>
    <string name="_8_playlists_spotify">8 playlists στο Spotify</string>
    <string name="spotify_str">για να ακούσεις όσο διαβάζεις</string>
    <string name="spotify_cr">-- Από τη φοιτήτρια, Αλεξάνδρα Κουτσούκου.</string>
    <string name="covid_19">Πανελλήνιες εν μέσω Covid-19</string>
    <string name="covid_cr">-- Από τις Άρτεμις Τσίτσικα, Καθηγήτρια Παιδιατρικής κ\' Ευθαλία Τζίλα Παιδοψυχίατρος.</string>
    <string name="symptoms1">Κρίσεις άγχους</string>
    <string name="symptoms2">και πως να τις αντιμετωπίσεις</string>
    <string name="symptoms_cr">-- Από τη συμβουλευτική ψυχολόγο, κυρία Ξένια Ταραβίρα.</string>
    <string name="food">Tα SOS για τη διατροφή σου</string>
    <string name="food_cr">-- από την κλινικό διαιτολόγο, Δέσποινα Μαρσέλου.</string>
    <string name="shoot_for_the_top">Στόχευσε την κορυφή</string>
    <string name="answered">Απαντημένη</string>
    <string name="not_answered">Αναπάντητη</string>
    <string name="not_visited">Δεν έχεις επισκεφθεί</string>
    <string name="go">GO!</string>
</resources>