<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sigtnupRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_effect"
    tools:context=".Activities.SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ic_back"
        android:onClick="clickBack"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="3dp"
        android:padding="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_back"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/myAppName"
        android:fontFamily="@font/funcity"
        android:text="@string/a_help_p"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myCopyright"
        android:text="@string/_2022"
        android:layout_below="@+id/myAppName"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_copyright"
        android:drawablePadding="5dp"
        android:textStyle="bold"
        android:textSize="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/name"
        android:padding="8dp"
        android:layout_below="@+id/myCopyright"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:background="@color/orangeTint"
        android:textColorHint= "@color/white"
        android:inputType="text"
        android:hint="@string/name"
        android:textSize="16dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"/>


    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/fullname"
        android:padding="8dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:background="@color/orangeTint"
        android:textColorHint= "@color/white"
        android:inputType="text"
        android:hint="@string/fullname"
        android:textSize="16dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"/>


    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/email"
        android:layout_below="@+id/fullname"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:background="@color/orangeTint"
        android:textColorHint= "@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="16dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"/>


    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:background="@color/orangeTint"
        android:textColorHint= "@color/white"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:textSize="16dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"/>



    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/passwordConf"
        android:layout_below="@+id/password"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:background="@color/orangeTint"
        android:textColorHint= "@color/white"
        android:inputType="textPassword"
        android:hint="@string/passwordConf"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="8dp"
        android:textSize="16dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/emptyField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/passwordConf"
        android:layout_centerInParent="true"
        android:text="@string/emptyFieldAll"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:drawableLeft="@drawable/ic_error"
        android:drawablePadding="5dp"
        android:visibility="invisible"/>

    <androidx.cardview.widget.CardView
        android:layout_width="135dp"
        android:layout_height="57dp"
        android:id="@+id/cardToButton"
        android:layout_below="@+id/passwordConf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:onClick="clickSignup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="18dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>