<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_effect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/userCapital"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="A"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/theme"/>


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="User"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#ffffff"/>

    <LinearLayout
        android:id="@+id/linearHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickHome"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/home"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTheory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickTheory"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_book" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/theory"
            android:textColor="#ffffff" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearTests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickTests"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_tests" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/practice"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickPreviousExams"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_fire" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/previousYears"
            android:textColor="#ffffff" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#ffffff"/>

    <LinearLayout
        android:id="@+id/linearPerformance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickPerformance"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_performance" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/performance"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBookmarked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickBookmarked"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bookmark_filled" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/bookmark"
            android:textColor="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearDrwrLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickDrwrLeaderboard"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_leaderboard" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/leaderboard"
            android:textColor="#ffffff" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#ffffff"/>


    <LinearLayout
        android:id="@+id/linearAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickAbout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_about" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/about"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="ClickLogout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/logout"
            android:textColor="#ffffff" />


    </LinearLayout>





</LinearLayout>